# soh_libs

./: Cargo.toml  README.md
soh_game/: Cargo.toml
soh_game/src/: frame_timer.rs  lib.rs
soh_game/src/camera/: cam.rs  flier.rs  mod.rs  z_aligned.rs
soh_log/: Cargo.toml
soh_log/src/: color.rs  lib.rs
soh_math/: Cargo.toml
soh_math/macro_impl_vec/: Cargo.toml
soh_math/macro_impl_vec/src/: lib.rs
soh_math/macros/: Cargo.toml
soh_math/macros/src/: lib.rs
soh_math/src/: lib.rs  traits.rs
soh_math/src/color/: convert.rs  lerp.rs  mod.rs
soh_math/src/complex/: complex.rs  mod.rs
soh_math/src/fractal/: mod.rs
soh_math/src/imaginary/: complex.rs  mod.rs  quat.rs
soh_math/src/mat/: mat2.rs  mat3.rs  mat4.rs  mod.rs
soh_math/src/vec/: mod.rs  vec2.rs  vec3.rs  vec4.rs
soh_rng/: Cargo.toml
soh_rng/examples/: password_generator.rs  perm.rs
soh_rng/src/: gen_trait.rs  lib.rs  prelude.rs
soh_rng/src/engine/: lcg.rs  mod.rs  split_mix.rs  traits.rs  xoshiro_128_ss.rs  xoshiro_256_ss.rs
soh_thread/: Cargo.toml
soh_thread/src/: job_queue.rs  lib.rs  thread_pool.rs  worker.rs
soh_ui/: Cargo.toml
soh_utl/: Cargo.toml
soh_vk/: Cargo.toml
soh_vk/soh_vk_derive/: Cargo.toml
soh_vk/soh_vk_derive/src/: lib.rs
soh_vk/src/: context.rs  debug_messenger.rs  framebuffer.rs  index.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  render_pass.rs  surface.rs  swapchain.rs  typedefs.rs  types.rs
soh_vk/src/cmd/: buffer.rs  mod.rs  pool.rs
soh_vk/src/command/: buffer.rs  mod.rs  pool.rs
soh_vk/src/debug/: imp.rs  mod.rs
soh_vk/src/descriptor/: mod.rs  pool.rs  set.rs  set_layout.rs  uniform.rs
soh_vk/src/device/: mod.rs  physical.rs
soh_vk/src/framebuffer/: mod.rs  render_pass.rs
soh_vk/src/res/: buffer.rs  image.rs  memory.rs  mod.rs
soh_vk/src/shader/: manager.rs  mod.rs
soh_vk/src/sync/: fence.rs  mod.rs  semaphore.rs
soh_vk/src/vertex/: buffer.rs  mod.rs
soh_vk/src/wsi/: mod.rs  surface.rs  swapchain.rs
src/: lib.rs
