#==============================================================================
# Crate config
[package]
name = "soh_libs"
version = "0.1.0"
edition = "2021"

[dependencies]
soh_rng = { workspace = true, optional = true }
soh_log = { workspace = true, optional = true }
soh_vk = { workspace = true, optional = true }
soh_thread = { workspace = true, optional = true }

[features]
default = [ ]
rng = [ "dep:soh_rng" ]
log = [ "dep:soh_log", "soh_vk?/log", "soh_thread?/log" ]
vk = [ "dep:soh_vk" ]
thread = [ "dep:soh_thread" ]

#==============================================================================
# Workspace config
[workspace]
members = [
    "soh_rng",
    "soh_log",
    "soh_vk" ,
    "soh_thread"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# My libs
soh_rng = { path = "./soh_rng" }
soh_log = { path = "./soh_log" }
soh_vk = { path = "./soh_vk" }
soh_thread = { path = "./soh_thread" }

# Other libs
anyhow = ">=1.0,<2.0"
clap = { version = ">=4.0,<5.0", features = [ "derive" ] }
serde = { version = ">=1.0,<2.0", features = [ "derive" ] }

ash = { version = "<1.0", features = [ "linked" ] }
sdl2 = "<1.0"
ron = "<1.0"

[workspace.lints.clippy]
needless_return = "allow"   # I like returns

#==============================================================================
