#==============================================================================
# Crate config
[package]
name = "soh_libs"
version = "0.1.0"
edition = "2021"

[dependencies]
soh_math = { workspace = true, optional = true }
soh_rng = { workspace = true, optional = true }
soh_log = { workspace = true, optional = true }
soh_vk = { workspace = true, optional = true }
soh_ui = { workspace = true, optional = true }
soh_thread = { workspace = true, optional = true }

[features]
default = [ ]
all = [ "math", "rng", "log", "vk", "ui", "thread" ]

math = [ "dep:soh_math" ]
rng = [ "dep:soh_rng" ]
log = [ "dep:soh_log", "soh_vk?/log", "soh_ui?/log", "soh_thread?/log" ]
vk = [ "dep:soh_vk", "math" ]
ui = [ "dep:soh_ui", "vk" ]
thread = [ "dep:soh_thread" ]

serde = [ "soh_math?/serde" ]

#==============================================================================
# Workspace config
[workspace]
members = [
    "soh_math",
    "soh_rng",
    "soh_log",
    "soh_vk" ,
    "soh_ui",
    "soh_thread"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# My libs
soh_math = { path = "./soh_math" }
soh_rng = { path = "./soh_rng" }
soh_log = { path = "./soh_log" }
soh_vk = { path = "./soh_vk" }
soh_ui = { path = "./soh_ui" }
soh_thread = { path = "./soh_thread" }

# Other libs
anyhow = ">=1.0,<2.0"
clap = { version = ">=4.0,<5.0", features = [ "derive" ] }
serde = { version = ">=1.0,<2.0", features = [ "derive" ] }
num-traits = "<1.0"

ash = "<1.0"
sdl2 = "<1.0"
ron = "<1.0"

[workspace.lints.clippy]
needless_return = "allow"   # I like returns

#==============================================================================
