#==============================================================================
# Crate config
[package]
name = "soh_libs"
version = "0.1.0"
edition = "2021"

[dependencies]
soh_math = { workspace = true, optional = true }
soh_rng = { workspace = true, optional = true }
soh_log = { workspace = true, optional = true }
soh_vk = { workspace = true, optional = true }
soh_ui = { workspace = true, optional = true }
soh_thread = { workspace = true, optional = true }
soh_game = { workspace = true, optional = true }

[features]
default = [ ]
all = [ "math", "rng", "log", "vk", "ui", "thread", "game" ]

math = [ "dep:soh_math" ]
rng = [ "dep:soh_rng" ]
log = [ "dep:soh_log", "soh_thread?/log" ]
vk = [ "dep:soh_vk", "math" ]
ui = [ "dep:soh_ui", "vk" ]
thread = [ "dep:soh_thread" ]
game = [ "dep:soh_game" ]

serde = [ "soh_math?/serde" ]
f128 = [ "soh_math?/f128" ]

#==============================================================================
# Workspace config
[workspace]
members = [
    "soh_math",
    "soh_rng",
    "soh_log",
    "soh_vk",
    "soh_ui",
    "soh_thread",
    "soh_game"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# My libs
soh_math = { path = "./soh_math" }
soh_rng = { path = "./soh_rng" }
soh_log = { path = "./soh_log" }
soh_vk = { path = "./soh_vk" }
soh_ui = { path = "./soh_ui" }
soh_thread = { path = "./soh_thread" }
soh_game = { path = "./soh_game" }

# Other libs
anyhow = "1.0"
clap = { version = "4.0", features = [ "derive" ] }
serde = { version = "1.0", features = [ "derive" ] }
num-traits = "0.2"
f128_num = { package = "f128", version = "0.2" }

ash = "0.38"
winit = "0.30"
ron = "0.8"

# Macro libs
syn = { version = "2.0", features = [ "full" ] }
quote = "1.0"

[workspace.lints.clippy]
needless_return = "allow"   # I like returns

#==============================================================================
