[package]
name = "soh_math"
version.workspace = true
edition.workspace = true

[dependencies]
macros = { path = "./macros" }
serde = { workspace = true, optional = true }
num-traits = { workspace = true }

[dev-dependencies]
soh_rng = { workspace = true }

[features]
serde = [ "dep:serde" ]

[lints]
workspace = true
