[package]
name = "soh_math"
version.workspace = true
edition.workspace = true

[dependencies]
macro_impl_vec = { path = "./macro_impl_vec" }
serde = { workspace = true, optional = true }
num-traits = { workspace = true }

[dev-dependencies]
soh_rng = { workspace = true }

[features]
serde = [ "dep:serde" ]

[lints]
workspace = true
